
syntax = "proto3" ;
package msg ;
option go_package = "/msg" ;


message quest{
  bytes crossTx = 1;
}